--- a/_config.yml
+++ b/_config.yml
@@ -8,18 +8,17 @@ menu:
 
 # Customize
 customize:
-    header-background-image: "/media/background/Amanecer_1280x339.jpeg"
-    header-background-image-lowres: "/media/background/Amanecer_500x501.jpeg"
+    header-background-image: false
+    header-background-image-lowres: false
     logo:
         width: 260px
         height: 156px
-        # url: "/media/logo/logo%20MAMA%20ANTULA%20Blanco.svg"
-        url: "/media/background/Mama%20Antula%20y%20Manuelito_crop2.jpeg"
+        url: "/media/logo/Logo-MAMA-ANTULA-03.png"
     theme_color: '#d5c28a'
     highlight: androidstudio
     sidebar: left # sidebar position, options: left, right
     thumbnail: true # enable posts thumbnail, options: true, false
-    favicon: "/media/logo/logo%20MAMA%20ANTULA%20Blanco.svg" # path to favicon
+    favicon: "/media/logo/favicon.ico" # path to favicon
     social_links: # for more icons, please see http://fontawesome.io/icons/#brand
         twitter: https://twitter.com/mamaantula?lang=es
         facebook: https://www.facebook.com/groups/130158920477554/?fref=ts
@@ -30,13 +29,13 @@ customize:
 # Widgets
 widgets:
     - links
+    - recent_posts
+#    - geovisites
 #    - category
 #    - archive
 #    - tag
-    - sticky_posts
-#    - recent_posts
-    - geovisites
     - tagcloud
+    - sticky_posts
 
 # Search
 search:
